# make_cef

./: README.md  pyproject.toml
code/: cef_alpha_step.py  dp.py  ellipse_solver.py  exact_cef.py  get_result.py  plot_cef.py
graph_plot/compare/: compare_cef_method.json
previous_dataset/: create_dataset.py  vertex_008_001.json  vertex_008_002.json  vertex_008_003.json  vertex_008_004.json  vertex_008_005.json  vertex_008_006.json  vertex_008_007.json  vertex_008_008.json  vertex_008_009.json  vertex_008_010.json  vertex_008_011.json  vertex_008_012.json  vertex_008_013.json  vertex_008_014.json  vertex_008_015.json  vertex_008_016.json  vertex_008_017.json  vertex_008_018.json  vertex_008_019.json  vertex_008_020.json  vertex_008_021.json  vertex_008_022.json  vertex_008_023.json  vertex_008_024.json  vertex_008_025.json  vertex_008_026.json  vertex_008_027.json  vertex_008_028.json  vertex_008_029.json  vertex_008_030.json  vertex_010_001.json  vertex_010_002.json  vertex_010_003.json  vertex_010_004.json  vertex_010_005.json  vertex_010_006.json  vertex_010_007.json  vertex_010_008.json  vertex_010_009.json  (+1181 more)
proposed_method/vertex_num_008/txt/: 008_001.txt  008_002.txt  008_003.txt  008_004.txt  008_005.txt  008_006.txt  008_007.txt  008_008.txt  008_009.txt  008_010.txt  008_011.txt  008_012.txt  008_013.txt  008_014.txt  008_015.txt  008_016.txt  008_018.txt  008_019.txt  008_022.txt  008_023.txt  008_024.txt  008_025.txt  008_026.txt  008_028.txt  008_030.txt
proposed_method/vertex_num_010/txt/: 010_001.txt  010_002.txt  010_003.txt  (+25 more)
src/make_cef/: __init__.py
(+413 files in other folders)
