[project]
name = "make-cef"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yusuke5128", email = "akka.bayashi.0512@icloud.com" }
]
dependencies = [
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "japanize-matplotlib>=1.1.3",
    "setuptools>=75.8.0",
    "scipy>=1.15.1",
    "pyscipopt>=5.2.1",
    "pandas>=2.2.3",
    "numpy>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/make_cef"]
